Fixes #3 Locations have too big titles on View Location page

--- a/less/global.less
+++ b/less/global.less
@@ -111,7 +111,7 @@ body {
   }
 }
 
-.title {
+.b-title {
   font-weight: bold;
   font-size: 26px;
   line-height: 26px;
@@ -176,6 +176,16 @@ body {
 
     + .box {
       margin-top: @vertical-rhythm*2;
+    }
+  }
+}
+
+.categories {
+  table {
+    .table();
+
+    p {
+      margin: 0;
     }
   }
 }
